--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,7 @@ PORT=4000
 
 # MySQL
 DB_HOST=localhost
+DB_PORT=3307
 DB_USER=root
 DB_PASSWORD=root
 DB_NAME=reachinbox
@@ -13,3 +14,14 @@ REDIS_PORT=6379
 # Rate limiting
 MAX_EMAILS_PER_HOUR=20
 EMAIL_MIN_DELAY_MS=2000
+
+# Auth (local)
+AUTH_EMAIL=hasanadmin@mail.com
+AUTH_PASSWORD=hasan
+AUTH_TOKEN_TTL_SECONDS=86400
+
+# CORS (frontend dev server)
+CORS_ORIGIN=http://localhost:5173
+
+# Email sender
+SENDER_EMAIL=noreply@reachinbox.local
